# engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.py  todo.txt
editor/: CMakeLists.txt
editor/app/include/editor/: components.hpp  editor.hpp  main.hpp
editor/app/include/editor/project-manager/: project-manager.hpp
editor/app/include/editor/shared/: file-picker.hpp  image.hpp
editor/app/include/editor/shared/menu/: menu-bar.hpp  menu-item.hpp  menu.hpp
editor/app/include/editor/shared/tab-bar/: tab-bar.hpp  tab-item.hpp  tab.hpp
editor/app/include/editor/sprite-sheet/: behavior.hpp  cell.hpp  cells-manager.hpp  events.hpp  file.hpp  files-manager.hpp  sprite-sheet-manager.hpp
editor/app/include/editor/sprite-sheet-manager/: sprite-sheet-manager.hpp
editor/app/src/: dep.cpp  main.cpp  prev.cpp
editor/app/src/bundle-manager/: bundle-manager.cpp
editor/app/src/project-manager/: project-manager.cpp
editor/app/src/shared/: file-picker.cpp  image.cpp  popup.cpp  window.cpp
editor/app/src/shared/menu/: menu.cpp
editor/app/src/shared/tab-bar/: tab-bar.cpp  tab-item.cpp  tab.cpp
editor/app/src/sprite-sheet/: cell.cpp  cells-manager.cpp  events.cpp  file.cpp  files-manager.cpp  sprite-sheet-manager.cpp
editor/app/src/sprite-sheet-manager/: sprite-sheet-manager.cpp
editor/data/main/: .export-config
editor/data/main/fonts/: .export-config
editor/include/editor/: components.hpp  editor.hpp  main.hpp
editor/include/editor/bundle-manager/: bundle-manager.hpp
editor/include/editor/project-manager/: project-manager.hpp
editor/include/editor/shared/: file-picker.hpp  popup.hpp  window.hpp
editor/include/editor/shared/menu/: menu-bar.hpp  menu-item.hpp  menu.hpp
editor/include/editor/shared/tab-bar/: tab-bar.hpp  tab-item.hpp  tab.hpp
editor/include/editor/sprite-sheet-manager/: sprite-sheet-manager.hpp
editor/src/: main.cpp
editor/src/bundle-manager/: bundle-manager.cpp
editor/src/project-manager/: project-manager.cpp
editor/src/shared/: file-picker.cpp  popup.cpp  window.cpp
editor/src/shared/menu/: menu-bar.cpp  menu-item.cpp  menu.cpp
editor/src/shared/tab-bar/: tab-bar.cpp  tab-item.cpp  tab.cpp
editor/src/sprite-sheet-manager/: sprite-sheet-manager.cpp
engine/: CMakeLists.txt
engine/asset-pipeline/: CMakeLists.txt
engine/asset-pipeline/asset-bundler/: CMakeLists.txt
engine/asset-pipeline/asset-bundler/include/wind/asset-bundler/: asset-bundler.hpp  consts.hpp
engine/asset-pipeline/asset-bundler/src/: asset-bundler.cpp  clear-cache.cpp  compile-directory.cpp  compile-file.cpp  export-directory.cpp  link-directory.cpp  main.cpp  preprocessing.cpp  processing.cpp
engine/asset-pipeline/asset-manager/: CMakeLists.txt
engine/asset-pipeline/asset-manager/include/wind/asset-manager/: asset-manager.hpp
engine/asset-pipeline/asset-manager/src/: asset-manager.cpp
engine/asset-pipeline/include/wind/asset-pipeline/: asset-bundler.hpp  asset-manager.hpp
engine/asset-pipeline/include/wind/asset-pipeline/pipes/: default-pipe.hpp  img-pipe.hpp  pipe.hpp  pipes-register.hpp  shader-pipe.hpp
engine/asset-pipeline/pipes/include/wind/pipes/: default-pipe.hpp  pipe.hpp
engine/asset-pipeline/src/: asset-bundler.cpp  asset-manager.cpp  clear-cache.cpp  compile-directory.cpp  compile-file.cpp  export-directory.cpp  link-directory.cpp  preprocessing.cpp  processing.cpp
engine/dom/: CMakeLists.txt
engine/dom-dep/: dom.cpp  dom.hpp  shadow-dom.cpp  shadow-dom.hpp
engine/dom/include/wind/dom/: component.txt  dom.hpp  shadow-dom.hpp
engine/dom/include/wind/dom/attributes/: base.hpp  button.hpp  checkbox.hpp  div.hpp  image.hpp  index.hpp  input.hpp  root.hpp  select.hpp  text.hpp
engine/dom/include/wind/dom/dom/: dom.hpp  index.hpp  shared.hpp
engine/dom/include/wind/dom/dom/components/: button.hpp  checkbox.hpp  div.hpp  element.hpp  image.hpp  index.hpp  input.hpp  root.hpp  select.hpp  text.hpp
engine/dom/include/wind/dom/shadow-dom/: diff.hpp  index.hpp  pool-manager.hpp  shadow-dom.hpp  shared.hpp
engine/dom/include/wind/dom/shadow-dom/components/: button.hpp  checkbox.hpp  div.hpp  element.hpp  image.hpp  index.hpp  (+5 more)
engine/dom/include/wind/dom/utils/: utils.hpp
engine/dom/src/: dom.cpp  shadow-dom.cpp
engine/dom/src/dom/: dom.cpp
engine/dom/src/dom/components/: button.cpp  checkbox.cpp  div.cpp  element.cpp  image.cpp  input.cpp  root.cpp  select.cpp  text.cpp
engine/dom/src/shadow-dom/: diff.cpp  pool-manager.cpp  shadow-dom.cpp
engine/dom/src/shadow-dom/components/: button.cpp  checkbox.cpp  div.cpp  element.cpp  image.cpp  input.cpp  root.cpp  select.cpp  text.cpp
engine/entry/: CMakeLists.txt
engine/entry/include/wind/: wind.hpp
engine/entry/src/: default-res.cpp  wind.cpp
engine/event-manager/: CMakeLists.txt
engine/event-manager/include/wind/event-manager/: event-manager.hpp
engine/event-manager/src/: event-manager.cpp
engine/input-system/: CMakeLists.txt
engine/input-system/include/wind/input-system/: context.hpp  input-system.hpp  keyboard-context.hpp  keys.hpp  mouse-context.hpp  trigger.hpp
engine/input-system/src/: input-system.cpp
engine/input-system/src/context/: keyboard-context.cpp  keys.cpp  mouse-context.cpp
engine/input-system/src/triggers/: grouped-triggers.cpp  keycode-triggers.cpp  trigger.cpp
engine/language/: CMakeLists.txt
engine/language/include/wind/language/: language.hpp  tokenizer.hpp
engine/renderer/: CMakeLists.txt
engine/renderer/include/wind/renderer/: assets.hpp  camera.hpp  command-buffer.hpp  material.hpp  mesh.hpp  object.hpp  opengl_includes.hpp  procedural-graphics.hpp  render_context.hpp  shader.hpp  sprite.hpp  text-mesh.hpp  texture.hpp
engine/renderer/src/: assets.cpp  camera.cpp  command-buffer.cpp  material.cpp  mesh.cpp  procedural-graphics.cpp  render_context.cpp  shader.cpp  sprite.cpp  texture.cpp
engine/utils/: CMakeLists.txt
engine/utils/include/wind/utils/: includes.hpp  utils.hpp
engine/window/: CMakeLists.txt
engine/window/include/wind/window/: window.hpp
engine/window/src/: window.cpp
(+44 files in other folders)
